--- a/404.html
+++ b/404.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="robots" content="noindex">
 
-	<title>Overview</title>
+	<title>Page not found</title>
 
 	<link rel="stylesheet" href="resources/bootstrap.min.css?77c834dba2a10c59a0eaae60ffa331f219699ff7">
 	<link rel="stylesheet" href="resources/style.css?a2b5efb503881470385230f40f9bcc3c94d665e7">
@@ -22,7 +23,7 @@
                     <input type="hidden" name="cx" value="">
                     <input type="hidden" name="ie" value="UTF-8">
                     <div class="form-group">
-                        <input type="text" name="q" class="search-query form-control" placeholder="Search" autofocus>
+                        <input type="text" name="q" class="search-query form-control" placeholder="Search">
 					</div>
 				</form>
 
@@ -74,62 +75,10 @@
 <div id="right">
 	<div id="rightInner">
 <div id="content">
-	<h1>Overview</h1>
-
-
-
-
-
-<div class="panel panel-default">
-    <div class="panel-heading"><h2>Classes summary</h2></div>
-	<table class="summary table table-bordered table-striped" id="classes">
-<tr>
-	<td class="name"><a href="class-Config.html">Config</a></td>
-	<td>create new Config and handling this Config</td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Cookie.html">Cookie</a></td>
-	<td>processing operations with Cookie</td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Database.html">Database</a></td>
-	<td>processing operations with DataBse </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Hash.html">Hash</a></td>
-	<td>aprocessing operations with Hash</td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Input.html">Input</a></td>
-	<td>processing operations with Input </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Redirect.html">Redirect</a></td>
-	<td>processing operations with Redirect </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Session.html">Session</a></td>
-	<td>processing operations with Cookie </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Token.html">Token</a></td>
-	<td>processing operations with Token </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-User.html">User</a></td>
-	<td>processing operations with User </td>
-</tr>
-<tr>
-	<td class="name"><a href="class-Validate.html">Validate</a></td>
-	<td>processing operations with Validate </td>
-</tr>
-	</table>
-</div>
-
-
-
-
-
+	<h1>Page not found</h1>
+	<p>The requested page could not be found.</p>
+	<p>You have probably clicked on a link that is outdated and points to a page that does not exist any more or you have made an typing error in the address.</p>
+	<p>To continue please try to find requested page in the menu, or use search field on the top.</p>
 </div>
 	</div>
 
@@ -138,6 +87,6 @@
 	</div>
 </div>
 <script src="resources/combined.js?5991b0e7ac1e256719e3570457cba9546d591872"></script>
-<script src="elementlist.js?4740a552094dca987ad49c60053fd3b7865953a5"></script>
+<script src="elementlist.js"></script>
 </body>
 </html>
